Fix width for flex wrap

--- a/app/assets/stylesheets/music.scss
+++ b/app/assets/stylesheets/music.scss
@@ -98,7 +98,7 @@
   color: white;
   z-index: 5;
   position: relative;
-  width: 500px;
+  width: 70%;
   margin: 20px 0px 20px 0px;
   text-align: center;
 }
